--- a/AboutMe.html
+++ b/AboutMe.html
@@ -42,5 +42,14 @@
           </div>  <!--end of links-->
 
     </div>   <!--end of madisonHeader -->
+
+
+
+    <div class = "content">
+        I'm currently a sophomore at the University of Florida studying Computer Science.
+        This is my website that I plan to continuously
+        update as my studies progress.
+    </div>
   </body>
+
 </html>
