--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class = "links">
 
               <div class= "left">
-                <a href="./aboutme.html">About</a>
+                <a href="./AboutMe.html">About</a>
               </div><!--end of left links-->
 
 
