--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </a>
                 <!--LINKEDIN LINK-->
                 <a href = "https://www.linkedin.com/in/madison-fileman-703098156/" target="_blank">
-                  <img src="./images/linkedInLogoOrange.png" height=43px width=40px
+                  <img src='./images/linkedinLogoOrange.png' height=43px width=40px
                     onmouseover="this.src='./images/linkedinLogoWhite.png'"
                     onmouseout="this.src='./images/linkedinLogoOrange.png'">
                   </img>
