--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
                 </a>
                 <!--LINKEDIN LINK-->
                 <a href = "https://www.linkedin.com/in/madison-fileman-703098156/" target="_blank">
-                  <img src='./images/linkedinLogoOrange.png' height=43px width=40px
-                    onmouseover="this.src='./images/linkedinLogoWhite.png'"
-                    onmouseout="this.src='./images/linkedinLogoOrange.png'">
-                  </img>
+                  <img src="./images/linkedInLogoOrange.png" height=45px width=45px
+                  onmouseover="this.src= './images/linkedinLogoWhite.png'"
+                  onmouseout="this.src= './images/linkedInLogoOrange.png'"></img>
                 </a>
               </div> <!--end of right links-->
 
