--- a/index.html
+++ b/index.html
@@ -41,5 +41,11 @@
           </div>  <!--end of links-->
 
     </div>   <!--end of madisonHeader -->
+
+    <div class = "content">
+      <a href="https://docs.google.com/document/d/151nNrLxsqwGU5xybix4Hck65pmD5dVicIdpbB4KItSY/edit?usp=sharing" target="_blank">resume</a>
+
+
+    </div>
   </body>
 </html>
