edited resume link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     </div>   <!--end of madisonHeader -->
 
     <div class = "content">
-      <a href="https://docs.google.com/document/d/151nNrLxsqwGU5xybix4Hck65pmD5dVicIdpbB4KItSY/edit?usp=sharing" target="_blank">resume</a>
+      <a href="https://docs.google.com/document/d/151nNrLxsqwGU5xybix4Hck65pmD5dVicIdpbB4KItSY/edit?usp=sharing" target="_blank">
+        resume</a>
 
 
     </div>
