--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>   <!--end of madisonHeader -->
 
     <div class = "content">
-      <a href="#" target="_blank">
+      <a href="https://docs.google.com/document/d/1JsXdI5q6zJF1N8h1vMu_yH-wQRndr1BzR78cUpHTak8/edit?usp=sharing" target="_blank">
         resume</a>
 
 
