--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class = "madisonHeader">
 
         <div class = "name center">
-          <a href="./index.html">Madiso\n<br>Fileman</a>
+          <a href="#">Madiso\n<br>Fileman</a>
         </div>
 
 
