pls make the links work

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class = "madisonHeader">
 
         <div class = "name center">
-          <a href="#">Madiso\n<br>Fileman</a>
+          <a href="">Madiso\n<br>Fileman</a>
         </div>
 
 
@@ -43,10 +43,9 @@
     </div>   <!--end of madisonHeader -->
 
     <div class = "content">
-      <a href="https://docs.google.com/document/d/1JsXdI5q6zJF1N8h1vMu_yH-wQRndr1BzR78cUpHTak8/edit?usp=sharing" target="_blank">
-        resume</a>
-
-
+      <a href="https://docs.google.com/document/d/1JsXdI5q6zJF1N8h1vMu_yH-wQRndr1BzR78cUpHTak8/edit?usp=sharing" target="_blank">resume</a>
     </div>
+
+
   </body>
 </html>
