--- a/AboutMe.html
+++ b/AboutMe.html
@@ -28,13 +28,13 @@
                 <a href = "https://github.com/mfileman" target="_blank">
                   <img src="./images/githubLogoOrange.png" height=45px width=45px
                   onmouseover="this.src='./images/githubLogoWhite.png'"
-                  onmouseout="this.src='./images/githubLogoOrange.png'"></img>
+                  onmouseout="this.src='./images/githubLogoOrange.png'">
                 </a>
                 <!--LINKEDIN LINK-->
                 <a href = "https://www.linkedin.com/in/madison-fileman-703098156/" target="_blank">
                   <img src="./images/linkedinLogoOrange.png" height=45px width=45px
                   onmouseover="this.src= './images/linkedinLogoWhite.png'"
-                  onmouseout="this.src= './images/linkedinLogoOrange.png'"></img>
+                  onmouseout="this.src= './images/linkedinLogoOrange.png'">
                 </a>
               </div> <!--end of right links-->
 
